Compiler/src/main/java/Testing/Tests/LexicalTests/Fail/EOFinString.ru
/?
"soy un ejemplo $EOF$ ola"